<resources>
    <string name="app_name">Medicate Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">تخطي</string>
    <string name="login_not1">لأي أستفسار نأمل منكم</string>
    <string name="call_us">الأتصال بنا</string>
    <string name="rem_me">حفظ كلمة المرور</string>
    <string name="card_num">رقم البطاقة</string>
    <string name="hint_login_password">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="sing_up_txt">"ليس لديك حساب معنا ؟ "</string>
    <string name="join_us">أنضم إلينا</string>
    <string name="email_or_name_error">خطا في رقم البطاقة أو كلمة المرور</string>
    <string name="no_internet_con">الرجاء التأكد من أتصالك بالأنترنت</string>
    <string name="plz_fill_all">الرجاء تعبئة جميع البيانات التالية</string>
    <string name="join_doc_name_ar">الأسم الكامل (عربي)</string>
    <string name="join_doc_name_en">الأسم الكامل (أنجليزي)</string>
    <string name="join_email">البريد الإلكتروني</string>
    <string name="address">العنوان</string>
    <string name="country">الدولة</string>
    <string name="city">المدينة</string>
    <string name="arya">المنطقة</string>
    <string name="dob">تاريخ الميلاد</string>
    <string name="year">السنة</string>
    <string name="month">الشهر</string>
    <string name="day">اليوم</string>
    <string name="shpa">التخصص الرئيسي</string>
    <string name="doc_litle_info">نبذه عن الطبيب</string>
    <string name="add_pers_photo">صورة شخصية</string>
    <string name="agray">موافق</string>
    <string name="join_phar_name">أسم الصيدلية</string>
    <string name="join_par_man_name">اسم مفوض الصيدلية</string>
    <string name="join_email_manger">البريد الإلكتروني الخاص بالمفوض</string>
    <string name="join_phone_mager">رقم هاتف المفوض</string>
    <string name="add_phar_logo">صورة شعار الصيدلية</string>
    <string name="join_clinc_name">أسم المصحة / العيادة</string>
    <string name="join_clinc_name_manger">أسم مفوض المصحة</string>
    <string name="join_clinc_logo">صورة شعار المصحة</string>
    <string name="join_dig_name">أسم عيادة الأسنان</string>
    <string name="join_dig_name_manger">أسم المفوض الخاص بالمركز</string>
    <string name="main_clinic">مصحة / عيادة</string>
    <string name="main_phar">صيدلية</string>
    <string name="main_doctor">طبيب</string>
    <string name="main_dig">عيادة أسنان</string>
    <string name="Hello">مرحباً بك</string>
    <string name="control_panal">لوحة المراقبة</string>
    <string name="account_chack">كشف حساب</string>
    <string name="pash_chack">الأستعلام عن مستفيد</string>
    <string name="join_doc_alias">درجة الطبيب</string>
    <string name="doc_alias_doc">دكتور</string>
    <string name="join_doc_deggray">الدرجة العلمية</string>
    <string name="join_unv">الجامعة المتخرج منها</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="join_jansia">الجنسية</string>
    <string name="join_gender">الجنس</string>
    <string name="join_work_country">دولة مزاولة العمل</string>
    <string name="join_num_work">رقم رخصة مزاولة العمل</string>
    <string name="are_you_serv_privider">هل أنت مزود خدمة ؟</string>
    <string name="download_medicate_doc">حمل التطبيق مزودي الخدمة</string>
    <string name="are_you_user">هذا تطبيق مزودي الخدمة</string>
    <string name="download_medicate_user">تحميل تطبيق المستخدمين</string>
    <string name="male">ذكر</string>
    <string name="female">أنثى</string>
    <string-array name="doc_deggry">
        <item>MD</item>
        <item>BSC</item>
        <item>MSC</item>
        <item>PsyD</item>
        <item>DO</item>
        <item>MBBS</item>
        <item>MBChB</item>
        <item>DMD</item>
        <item>DDS</item>
        <item>DPM</item>
        <item>EdD</item>
        <item>PharmD</item>
    </string-array>
    <string name="sp_1">اسنان</string>
    <string name="sp_2">عيون</string>
    <string name="sp_3">جلدية</string>
    <string name="sp_4">جراحية تجميلية</string>
    <string name="sp_5">جراحة عامة</string>
    <string name="sp_6">عظام</string>
    <string name="sp_7">مخ وأعصاب</string>
    <string name="sp_8">نساء وتوليد</string>
    <string name="sp_9">انف وأذن وحنجرة</string>
    <string name="sp_10">علاج طبيعي</string>
    <string name="sp_11">أطفال وحديثي الولادة</string>
    <string name="sp_12">نطق وتخاطب</string>
    <string name="sp_13">سمعيات</string>
    <string name="sp_14">ذكورة وعقم</string>
    <string name="sp_15">طب نفسي</string>
    <string name="sp_16">قلب وأوعية دموية</string>
    <string name="sp_17">اورام</string>
    <string name="sp_18">باطنة</string>
    <string name="sp_19">طبيب عام</string>
    <string name="sp_20">امراض الدم</string>
    <string name="sp_21">تخسيس وتغذية</string>
    <string name="sp_22">جراحة اطفال</string>
    <string name="sp_23">جراحة اورام</string>
    <string name="sp_24">جراحة اوعية دموية</string>
    <string name="sp_26">جراحة سمنة ومناظير</string>
    <string name="sp_27">جراحة عمود الفقري</string>
    <string name="sp_28">جراحة قلب وصدر</string>
    <string name="sp_29">جهاز هظمي ومناظير</string>
    <string name="sp_30">حساسية ومناعة</string>
    <string name="sp_31">حقن مجهري واطفال انابيب</string>
    <string name="sp_32">روماتيزم</string>
    <string name="sp_33">سكروغدد صماء</string>
    <string name="sp_34">صدر وجهاز تنفسي</string>
    <string name="sp_35">طب الأسرة</string>
    <string name="sp_36">طب المسنين</string>
    <string name="sp_37">طب تقويمي</string>
    <string name="sp_38">علاج الآلام</string>
    <string name="sp_39">علاج طبيعي واصابات ملاعب</string>
    <string name="sp_40">كبد</string>
    <string name="sp_41">كلى</string>
    <string name="sp_42">مراكز أشعة</string>
    <string name="sp_43">مسالك بولية</string>
    <string name="sp_44">معامل تحاليل</string>
    <string name="sp_45">مراكز أشعة</string>
    <string name="sp_46">أستعمال الليزر والضوء المكثف</string>
    <string name="sp_47">جراحة الشبكية</string>
    <string name="sp_48">صحة الأم والطفل</string>
    <string name="sp_49">الطب التلطيفي</string>
    <string name="sp_50">الوبائيات الحلقية</string>
    <string name="sp_51">جراحة الجلد</string>
    <string name="sp_52">طب الإدمان</string>
    <string name="sp_53">الأنفصام</string>
    <string name="sp_54">تخدير موضعي</string>
    <string name="sp_55">تخدير نساء وتوليد</string>
    <string name="sp_56">تخدير أسعاف</string>
    <string name="sp_57">الطب النووي</string>
    <string name="sp_58">أشعة الأعصاب التداخلية</string>
    <string name="sp_59">باثولوجيا الأمراض</string>
    <string name="sp_60">الأحياء الدقيقة</string>
    <string name="sp_61">العلاج بالإبر الصينية</string>
    <string name="sp_62">الصيدلة</string>
    <string name="sp_63">جراحة القولون والمستقيم</string>
    <string name="sp_64">جراحة مناظير</string>
    <string name="sp_65">مسالك بولية</string>
    <string name="sp_66">أشعة الأعصاب التشخيصية</string>
    <string name="sp_67">قلب  (اطفال)</string>
    <string name="sp_68">جراحة قلب صناعي</string>
    <string name="sp_69">أمراض الدم أطفال</string>
    <string name="sp_70">الجهاز العضمي والكبد</string>
    <string name="sp_71">جراحة مناظير نسائية</string>
    <string name="sp_72">طب المهني والصناعي</string>
    <string name="sp_73">العلاج السلوكي للتوحد</string>
    <string name="sp_74">جراحة لإذن وزراعة القوقعة</string>
    <string name="sp_75">الماء الأزرق</string>
    <string name="sp_76">أمراض وزراعة الشعر</string>
    <string name="sp_77">طؤارئ سموم</string>
    <string name="sp_78">طؤارى أصابات</string>
    <string name="sp_79">جراحة الرأس</string>
    <string name="sp_80">العناعية المركز أطفال</string>
    <string name="sp_81">طب أطفال</string>
    <string name="sp_82">جراحة السمنة</string>
    <string name="sp_83">جراحة القلب</string>
    <string name="sp_84">أمراض القلب</string>
    <string name="sp_85">صدرية وأضطرابات النوم</string>
    <string name="sp_86">طب الطؤارى</string>
    <string name="sp_87">تغذية</string>
    <string name="sp_88">روماتيزم (كبار)</string>
    <string name="sp_89">تخدير</string>
    <string name="sp_90">أمراض الكلى (كبار)</string>
    <string name="sp_91">أمراض معدية</string>
    <string name="sp_92">صحة الفم والأسنان</string>
    <string name="sp_93">مدير العمليات</string>
    <string name="sp_94">الإقلاع عن التدخين</string>
    <string name="sp_95">جراحة صدر أطفال</string>
    <string name="sp_96">جراحة الاصابات</string>
    <string name="sp_97">طب الكوارث</string>
    <string name="sp_98">مسالك بولية أطفال</string>
    <string name="sp_99">الاستعاضة السنية</string>
    <string name="sp_100">تخدير القلب</string>
    <string name="sp_101">جراحة اليد</string>
    <string name="sp_102">طب عيون الاطفال والحول</string>
    <string name="ch_from_galry">أختيار صورة من الهاتف</string>
    <string name="captcher">ألتقاط صورة</string>
    <string name="join_dig_logo">صورة الشعار</string>
    <string name="cancel">إلغاء الأمر</string>
    <string name="are_you_suer_close_app">هل تريد إغلاق التطبيق ؟</string>
    <string name="notifications">الاشعارات</string>
    <string name="medical_qu">الأستشارات الطبية</string>
    <string name="contrac_type">العـقـد</string>
    <string name="req_value">القيمة المدخلة</string>
    <string name="req_climas_resved">قيمة المطالبات المستلمة</string>
    <string name="req_climas_non_resved">قيمة المطالبات الغير مستلمة</string>
    <string name="value_under_review">قيمة تحت المراجعة</string>
    <string name="value__reviewed">قيمة تمت مراجعتها</string>
    <string name="accepted_cliames">قيمة المطالبات المقبولة</string>
    <string name="unaccepted_cliames">قيمة المطالبات المرفوضة</string>
    <string name="hold_cliames">قيمة المطالبات المعلقة</string>
    <string name="usr_payed_value">قيمة تغطية المستفيد</string>
    <string name="usr_ret_value">قيمة تسترجع للمستفيد</string>
    <string name="Zawwya_company_typ">المركز النوعي</string>
    <string name="Akakos_company">أكاكوس النفطية</string>
    <string name="ok_value">القيمة المستحقة</string>
    <string name="new_q">جديدة</string>
    <string name="open_q">المفتوحة</string>
    <string name="closed_q">المغلقة</string>
    <string name="view_det">عرض التفاصيل</string>
    <string name="q_det">تفاصيل الأستشارة</string>
    <string name="cos_name">أسم المستفيد</string>
    <string name="q_q">الأستشارة</string>
    <string name="q_semp">الأعراض</string>
    <string name="q_age">العمر</string>
    <string name="q_bold_type">فصيلة الدم</string>
    <string name="q_res">الرد على الأستشارة</string>
    <string name="close">إغلاق</string>
    <string name="q_mzmna">الأمراض المزمنة</string>
    <string name="arabic">العربية</string>
    <string name="fransi">الفرنسية</string>
    <string name="turkia">التركية</string>
    <string name="english">الانجليزية</string>
    <string name="join_doc_languages">اللغات</string>
    <string name="user_type_1">العملاء</string>
    <string name="user_type_2">مزودي الخدمة</string>
    <string name="pass_or_name_error">خطأ في أسم المستخدم أو كلمة المرور</string>
    <string name="nav_home">الواجهة الرئيسية</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="user_card_num">رقم بطاقة المستفيد</string>
    <string name="check">التحقق</string>
    <string name="p_name">أسم المستفيد : </string>
    <string name="p_card_state">حالة البطاقة : </string>
    <string name="p_withdraw_amount">السقف العام : </string>
    <string name="rate_app">تقييم التطبيق</string>
</resources>