<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".LoginFragment">


    <ScrollView
        android:id="@+id/log_scrol"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip_but">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_up_txt"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/join_us"
                    android:textColor="@color/main"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <View
                    android:id="@+id/view"
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/true_gray" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_user"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/download_medicate_user"
                    android:textColor="@color/main"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="411dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:background="#FFFFFF"
                android:src="@drawable/download"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/download" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/climes_inside_back"
                android:gravity="center"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7">

                <LinearLayout
                    android:id="@+id/asd"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        app:boxBackgroundColor="@color/light_gray"
                        app:boxBackgroundMode="filled">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_name"
                            android:inputType="textPersonName"
                            android:textAlignment="viewStart"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout12"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/climes_inside_back"
                android:gravity="center"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        app:boxBackgroundColor="@color/light_gray"
                        app:boxBackgroundMode="filled"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_login_password"
                            android:inputType="textPersonName"
                            android:textAlignment="viewStart"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/but_s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout12">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:clickable="false"
                    android:focusable="auto"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/skip_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:text="@string/skip"
        android:textAlignment="viewStart"
        android:textColor="@color/main"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>